Fix alignment

--- a/source/assets/css/fonts.css.scss
+++ b/source/assets/css/fonts.css.scss
@@ -14,3 +14,6 @@
 .#{$fa-css-prefix}-print:before { content: $fa-var-print; }
 .#{$fa-css-prefix}-file-text:before { content: $fa-var-file-text; }
 .#{$fa-css-prefix}-code:before { content: $fa-var-code; }
+.#{$fa-css-prefix}-linkedin-square:before { content: $fa-var-linkedin-square; }
+.#{$fa-css-prefix}-twitter-square:before { content: $fa-var-twitter-square; }
+.#{$fa-css-prefix}-github-square:before { content: $fa-var-github-square; }
