--- a/source/assets/css/regions/_followMeBar.scss
+++ b/source/assets/css/regions/_followMeBar.scss
@@ -5,7 +5,7 @@
 .followMeBar {
 	margin: 0;
 	padding-top: $line-height-computed;
-	padding-bottom: ($line-height-computed / 2);
+	padding-bottom: ($line-height-computed / 4);
 	background: $white;
 	position: relative;
 	z-index: 20;
